<resources>
    <string name="app_name">MisContactos</string>
    <string name="texto_boton">Click!</string>
    <string name="texto_titulo">Hola mundo</string>
    <string name="mensaje">Favorito</string>
    <string name="star_button">Star</string>
    <string name="texto_accion">Acción</string>
    <string name="image_descr">Image profile</string>
    <string name="titulo_card">Android 7</string>
    <string name="descripcion_card">Aquí va la descripción.</string>
    <string name="pname">Name</string>
    <string name="pphone">Phone</string>
    <string name="likes">likes number</string>
    <string name="likesnumber">0</string>
    <string name="pemail">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>